Avances en casa

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,17 @@
 /Marks/nbproject/private/
 /Marks/build/
 /StudentMarks/nbproject/private/
+/Table/nbproject/private/
+/Table/build/
+/Matriz5x5/nbproject/private/
+/Matriz5x5/build/
+/MinumPrime/nbproject/private/
+/MinumPrime/build/
+/WorkingDay/nbproject/private/
+/WorkingDay/build/
+/Pen/nbproject/private/
+/Pen/build/
+/GetBigger/nbproject/private/
+/GetBigger/build/
+/NumberGame/nbproject/private/
+/NumberGame/build/
