Avances en clase 27-11-24

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /AdventCalendar/build/
 /DataBase/nbproject/private/
 /SortedArray/nbproject/private/
+/SortedArray/build/
+/Primitiva/nbproject/private/
+/Primitiva/build/
