Avances en clase

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 /SortedArray/build/
 /Primitiva/nbproject/private/
 /Primitiva/build/
+/AlphabetSoup/nbproject/private/
+/AlphabetSoup/build/
+/VisTeisMinas/nbproject/private/
