--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,12 @@
 /AnimalsJist/nbproject/private/
 /AnimalsJist/build/
 /ParImparGUI/nbproject/private/
+/ParImparGUI/build/
+/Calculadoraa/nbproject/private/
+/NotesSlider/nbproject/private/
+/NotesSlider/build/
+/GuidedMenu/nbproject/private/
+/GuidedMenu/build/
+/MenuChooser/nbproject/private/
+/MenuChooser/build/
+/Cine-TestNG/nbproject/private/
