--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,9 @@
 /MenuChooser/nbproject/private/
 /MenuChooser/build/
 /Cine-TestNG/nbproject/private/
+/JavaApplication77/nbproject/private/
+/MouseListener/nbproject/private/
+/MouseListener/build/
+/KeyListener/nbproject/private/
+/KeyListener/build/
+/SpaceShip/nbproject/private/
