--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@
 /KeyListener/nbproject/private/
 /KeyListener/build/
 /SpaceShip/nbproject/private/
+/Examen/nbproject/private/
+/Examen/build/
+/PruebaExamen/nbproject/private/
