--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@
 /Examen/nbproject/private/
 /Examen/build/
 /PruebaExamen/nbproject/private/
+/ProyectoManel/nbproject/private/
+/ProyectoManel/build/
